apps/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: docs
        image: ghcr.io/indy-center/docs:latest
        ports:
        - containerPort: 80
          protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          requests:
            cpu: 10m 
            memory: 64Mi
          limits:
            cpu: 20m
            memory: 128Mi
